# cmake-example

./: CMakeLists.txt  README.md  TODO  run_build.sh
code/: CMakeLists.txt  run_build.sh
code/include/: Giblet.h  giblet-generator.h  reader.h
code/src/giblet-creator/: CMakeLists.txt  Giblet.cpp  giblet-accessory.cpp  giblet-generator.cpp
code/src/giblet-world/: CMakeLists.txt  main.cpp
code/src/json-reader/: CMakeLists.txt  consumer_attributes.json  giblet-parts.json  giblet_accessories_schema.json  reader.cpp  remote-reader.cpp  remote-reader.h
code/test/: CMakeLists.txt  json-reader-tests.cpp
code/test/json-test-files/: test.json
docs/: README.md  TODO  giblet-world-condensed.drawio
include/: consumer-generator.h  consumer.h  giblet-accessory.h  giblet-generator.h  giblet.h  io.h  reader.h
src/giblet-consumer/: CMakeLists.txt  consumer-generator.cpp  consumer.cpp
src/giblet-creator/: CMakeLists.txt  giblet-accessory.cpp  giblet-generator.cpp  giblet.cpp
src/giblet-world/: CMakeLists.txt  main.cpp
src/io/: CMakeLists.txt  io.cpp
src/json-reader/: CMakeLists.txt  giblet-accessories-schema.json  reader.cpp  remote-reader.cpp  remote-reader.h
test/: CMakeLists.txt  giblet-tests.cpp  gtest_main_custom.cpp  io-tests.cpp  json-reader-tests.cpp  json-reader-tests_gtest.cpp  json-use-tests.cpp  readme
test/json-test-files/: test.json
